--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
     "pages/bluetooth/bluetooth",
     "pages/instrumentBoard/instrumentBoard",
     "pages/scan/scan",
-    "pages/user/user"
+    "pages/user/user",
+    "pages/account/account"
   ],
 
   "window": {
