--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "crypto-js": "^4.2.0",
-    "ethers": "^6.13.4"
+    "ethers": "^6.13.4",
+    "weapp-qrcode": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
